add multi migration , update api , bug fixss
